[project]
name = "filecodebox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=14.1.0",
    "aiofiles>=24.1.0",
    "botocore>=1.37.1",
    "fastapi>=0.115.12",
    "python-multipart>=0.0.20",
    "tortoise-orm>=0.25.0",
    "uvicorn>=0.34.1",
]
